--- a/style.css
+++ b/style.css
@@ -1,16 +1,18 @@
  a{
   text-decoration: none;
 }
+
 p, li {
   font-size: 16px;
   line-height: 2;
   letter-spacing: 1px;
   text-align: justify;
 }
+
 html {
   background-color: #00539F;
-
 }
+
 .mozilla {
   width: 600px;
   margin: 0 auto;
@@ -18,12 +20,13 @@ html {
   padding: 0 20px 20px 20px;
   box-shadow: 5px 10px;
 }
+
 img {
   display: block;
   margin: 0 auto;
 }
+
 h1 {
- 
   font-size: 60px;
   text-align: center;
   margin: 0 ;
@@ -33,18 +36,18 @@ h1 {
 }
 
 .head {
-  color:#000000;
+    color:#000000;
   font-size: 16px;
-  padding: 0 20px 20px 20px;
-  box-shadow: 5px 10px ;
+  padding: 20px 20px 20px 20px;
   background-color: #FF9500;
  display: block;
  text-decoration: none;
- margin: 25px auto;
+ margin: 25px auto 0;
  text-align: center;
+ margin: 0 auto 0 ;
 }
 
-}
+
 a:visited {
     color: green;
 }
