--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
- a{
-  text-decoration: none;
-}
-
 p, li {
   font-size: 16px;
   line-height: 2;
@@ -36,17 +32,22 @@ h1 {
 }
 
 .head {
-    color:#000000;
+  color:#000000;
   font-size: 16px;
   padding: 20px 20px 20px 20px;
   background-color: #FF9500;
- display: block;
- text-decoration: none;
- margin: 25px auto 0;
- text-align: center;
- margin: 0 auto 0 ;
+  display: block;
+  text-decoration: none;
+  margin: 25px auto 0;
+  text-align: center;
+  margin: 0 auto 0 ;
+  box-shadow: 5px 10px;
+
 }
 
+ a{
+  text-decoration: none;
+}
 
 a:visited {
     color: green;
