--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ html {
   margin: 0 auto 100px;
   background-color: #FF9500;
   padding: 0 20px 20px 20px;
-  box-shadow: 5px 10px;
+  box-shadow: 5px 10px #888888;
 }
 
 img {
