--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ h1 {
   text-shadow: 3px 3px 1px #000000;
 }
 
-.head {
+.footer {
   color:#000000;
   font-size: 16px;
   padding: 20px 20px 20px 20px;
